# dune-common

./: CMakeLists.txt  config.h.cmake  configure.ac  dune.module
cmake/modules/: DuneInitMechanism.cmake  DuneMacros.cmake
doc/doxygen/: Doxylocal
dune/common/: CMakeLists.txt  Makefile.am  arraylist.hh  debugallocator.hh  densematrix.hh  densevector.hh  fmatrix.hh  forloop.hh  fvector.hh  hybridutilities.hh  identitymatrix.hh  modules  parametertree.hh  sfinae.hh  shared_from_this.hh  streamoperators.hh  tuples.hh  tupleutility.hh  typelist.hh
dune/common/std/: CMakeLists.txt  Makefile.am  array.hh
dune/common/test/: CMakeLists.txt  arraytest.cc  testdebugallocator.cc
dune/common/tuples/: CMakeLists.txt  Makefile.am  TODO  access.hh  checkpredicate.hh  containstype.hh  densevector.hh  enumeration.hh  firstindex.hh  foreach.hh  forloop.hh  fvector.hh  indextuple.hh  instantiate.hh  integralconstant.hh  iostream.hh  modifiers.hh  modifiers_include.hh  modules  namespace.hh  nullptr.hh  pointer.hh  subtuple.hh  transform.hh  tuples.hh  tupleutility.hh  typeindexed.hh  typetraits.hh  unique_ptr.hh  uniqueelementtype.hh  utility.hh
dune/common/tuples/codegen/: README  generate_header.lua
dune/common/tuples/scripts/: common.lua  modifiers_include.lua  tupleutility.lua  write.lua
dune/common/tuples/test/: .gitignore  CMakeLists.txt  Makefile.am  TODO  printtuple.hh  test-densevectortuple.cc  test-enumerationtuple.cc  test-indextuple.cc  test-pointertuple.cc  test-subtuple.cc  test-uniqueptrtuple.cc
dune/functions/common/: shared_from_this.hh
m4/: dune.m4  dune_all.m4
share/bash-completion/completions/: dunecontrol
