install( FILES
         checkpredicate.hh
         containstype.hh
         densevector.hh
         firstindex.hh
         foreach.hh
         fvector.hh
         integralconstant.hh
         modifiers.hh
         modifiers_include.hh
         namespace.hh
         subtuple.hh
         tuples.hh
         tupleutility.hh
         typeindexed.hh
         typetraits.hh
         uniqueelementtype.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/common/tuples )
