install( FILES
         access.hh
         checkpredicate.hh
         containstype.hh
         densevector.hh
         firstindex.hh
         foreach.hh
         fvector.hh
         integralconstant.hh
         modifiers.hh
         modifiers_include.hh
         namespace.hh
         pointer.hh
         subtuple.hh
         transform.hh
         tuples.hh
         typeindexed.hh
         typetraits.hh
         uniqueelementtype.hh
         utility.hh
DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/dune/common/tuples )
