tuplesincludedir = $(includedir)/dune/common/tuples

tuplesinclude_HEADERS =	checkpredicate.hh \
			containstype.hh \
			densevector.hh \
			firstindex.hh \
			foreach.hh \
			fvector.hh \
			integralconstant.hh \
			modifiers.hh \
			modifiers_include.hh \
			namespace.hh \
			subtuple.hh \
			tuples.hh \
			tupleutility.hh \
			typeindexed.hh \
			typetraits.hh \
			uniqueelementtype.hh

SUBDIRS = test

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
