tuplesincludedir = $(includedir)/dune/common/tuples

tuplesinclude_HEADERS =	access.hh \
			checkpredicate.hh \
			containstype.hh \
			densevector.hh \
			firstindex.hh \
			foreach.hh \
			fvector.hh \
			enumeration.hh \
			instantiate.hh \
			integralconstant.hh \
			modifiers.hh \
			modifiers_include.hh \
			namespace.hh \
			nullptr.hh \
			pointer.hh \
			subtuple.hh \
			transform.hh \
			tuples.hh \
			typeindexed.hh \
			typetraits.hh \
			uniqueelementtype.hh \
			utility.hh

SUBDIRS = test

EXTRA_DIST = CMakeLists.txt

include $(top_srcdir)/am/global-rules
