TESTPROGS = test-densevectortuple test-indextuple test-pointertuple test-subtuple

EXTRA_PROGRAMS =

TESTS = $(TESTPROGS)

check_PROGRAMS = $(TESTPROGS)

noinst_HEADERS =

testincludedir = $(includedir)/dune/common/test
testinclude_HEADERS =

test_densevectortuple_SOURCES = test-densevectortuple.cc

test_indextuple_SOURCES = test-indextuple.cc

test_pointertuple_SOURCES = test-pointertuple.cc

test_subtuple_SOURCES = test-subtuple.cc

EXTRA_DIST =

include $(top_srcdir)/am/global-rules
