TESTPROGS = test-densevectortuple \
	    test-enumerationtuple \
	    test-pointertuple \
	    test-subtuple \
	    test-uniqueptrtuple

EXTRA_PROGRAMS =

TESTS = $(TESTPROGS)

check_PROGRAMS = $(TESTPROGS)

noinst_HEADERS =

testincludedir = $(includedir)/dune/common/test
testinclude_HEADERS =

test_densevectortuple_SOURCES = test-densevectortuple.cc
test_enumerationtuple_SOURCES = test-enumerationtuple.cc
test_pointertuple_SOURCES = test-pointertuple.cc
test_subtuple_SOURCES = test-subtuple.cc
test_uniqueptrtuple_SOURCES = test-uniqueptrtuple.cc

EXTRA_DIST =

include $(top_srcdir)/am/global-rules
